# sub-c

./: LICENSE  Makefile  README.md  dune-project  subc.opam
lib/: asm.ml  ast.ml  ast_analysis.ml  ast_flow_label.ml  ast_loop_analysis.ml  ast_resolution.ml  ast_type_check.ml  cfg.ml  codegen.ml  codegen_fixup.ml  codegen_lower.ml  dune  emit.ml  env.ml  io.ml  ir.ml  irgen.ml  irgen_opt.ml  lexer.mll  lexer_pp.ml  parser.mly  token.ml  type.ml
scripts/: dune  subc
test/: _regenerate_oracles.sh  _runner.sh  dune  test_codegen.ml  test_emitter.ml  test_irgen.ml  test_lexer.ml  test_parser.ml  utils.ml
test/oracles/chapter_01/valid/: multi_digit.asm  multi_digit.ast  multi_digit.ir  multi_digit.s  multi_digit.tokens  multi_digit.validate  newlines.asm  newlines.ast  newlines.ir  newlines.s  newlines.tokens  no_newlines.tokens  no_newlines.validate  return_0.asm  return_2.asm  return_2.ast  return_2.ir  return_2.s  return_2.tokens  return_2.validate  spaces.ast  tabs.asm  tabs.ast  tabs.ir
test/oracles/chapter_02/valid/: bitwise.asm  bitwise.ast  bitwise.ir  bitwise.s  bitwise.tokens  bitwise.validate  bitwise_int_min.asm  bitwise_int_min.ast  bitwise_int_min.ir  bitwise_int_min.s  bitwise_int_min.tokens  bitwise_int_min.validate  bitwise_zero.asm  bitwise_zero.ast  bitwise_zero.ir  bitwise_zero.s  bitwise_zero.tokens  bitwise_zero.validate  neg.asm  neg.ast  neg.ir  neg.s  neg.tokens  neg.validate  neg_zero.asm  neg_zero.ast  neg_zero.ir  neg_zero.s  neg_zero.tokens  neg_zero.validate  negate_int_max.asm  nested_ops.ir  (+38 more)
test_e2e/: _regenerate_oracles.sh  _runner.sh
(+2303 files in other folders)
